Disable compact object headers on JDK 27