@@ -54,6 +54,13 @@ public abstract class ElasticsearchTestBasePlugin implements Plugin<Project> {
 
     public static final Set<String> TEST_TASKS_WITH_ENTITLEMENTS = Set.of("test", "internalClusterTest");
 
+    /**
+     * On JDK 27, where compact object headers became the default, C2 can miscompile conversions that
+     * read freshly allocated arrays, zeroing the leading bytes/chars of UTF-8 round-trips. Disable COH
+     * until a fixed JDK 27 build is available; mirrors SystemJvmOptions#maybeWorkaroundC2Bug.
+     */
+    private static final List<String> JDK27_C2_BUG_WORKAROUND = List.of("-XX:-UseCompactObjectHeaders");
+
     @Inject
     protected abstract ProviderFactory getProviderFactory();
 
@@ -145,6 +152,8 @@ public abstract class ElasticsearchTestBasePlugin implements Plugin<Project> {
             test.getJvmArgumentProviders().add(new SimpleCommandLineArgumentProvider("-XX:HeapDumpPath=" + heapdumpDir));
             test.getJvmArgumentProviders()
                 .add(() -> List.of("-Dorg.apache.lucene.vectorization.upperJavaFeatureVersion=" + test.getJavaVersion().getMajorVersion()));
+            test.getJvmArgumentProviders()
+                .add(() -> test.getJavaVersion().getMajorVersion().equals("27") ? JDK27_C2_BUG_WORKAROUND : List.of());
 
             String argline = System.getProperty("tests.jvm.argline");
             if (argline != null) {
